# modbus-cli

./: .gitignore  LICENSE  README.md  article.md  demo.tape  linkedin_article.md  linkedin_article.txt  linkedin_post.txt  pyproject.toml
modbus_cli/: __init__.py  cli.py  dashboard.py  theme.py
