[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modbus-curl"
version = "0.1.0"
description = "A dead-simple CLI for reading and writing Modbus registers. Like curl, but for Modbus."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [{name = "Bernard Kibathi", email = "bernardkibathi@gmail.com"}]
keywords = ["modbus", "cli", "industrial", "iot", "scada", "plc", "rs485", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Hardware",
    "Topic :: Utilities",
]
dependencies = [
    "pymodbus>=3.5.0",
    "click>=8.0",
    "rich>=13.0",
    "textual>=0.50.0",
]

[project.urls]
Homepage = "https://github.com/19bk/modbus-cli"
Repository = "https://github.com/19bk/modbus-cli"
Issues = "https://github.com/19bk/modbus-cli/issues"

[project.scripts]
modbus = "modbus_cli.cli:cli"

[tool.setuptools.packages.find]
include = ["modbus_cli*"]
